Add RB attributes dummy script

--- a/CUAControllers.csproj
+++ b/CUAControllers.csproj
@@ -235,6 +235,7 @@
   <ItemGroup>
     <Compile Include="CUAControllers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RigidbodyAttributes.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
